--- a/style.css
+++ b/style.css
@@ -15,7 +15,19 @@
 /* ------------------------------- 1. Global Styles -------------------------------- */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap');
 
-/* Color palette we're using is: https://coolors.co/5722cd-4b49e8-f2f0ff-ed4385-0c0c0c */
+/*CSS Reset*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* Color palette used:  https://coolors.co/5722cd-4b49e8-f2f0ff-ed4385-0c0c0c  */
+
+body{
+    width: 1200px;
+    align-content: center;
+    margin:auto;
+}
 
 
 /* ------------------------------- 2. Typography ----------------------------------- */
@@ -31,10 +43,34 @@ h4 {font-family: 'Merriweather', serif;
 
 }
 
-p{
+h1,
+h3 {
+    color: #FFFFFF;
+    padding: 10px;
+}
+
+h1  {
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+
+.company-description p {
+    font-family: 'Merriweather', serif;
+    font-size: 24px;
+    text-align: center;
+    padding: 10px;
+    color: #4B49E8;
+}
+
+.questions p{
     font-family: 'Roboto', sans-serif;
 }
 
+.questions a{
+    text-decoration: none;
+}
 
 /* ------------------------------- 3. Layout --------------------------------------- */
 
@@ -46,6 +82,102 @@ p{
 
 /* --------------- 4.1 Header ------------------------- */
 
-/* --------------- 4.2 Introduction ------------------- */
+.site-header {
+    background-color: #4B49E8;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    position: relative;
+}
+/* Styling the navigation menu*/
+.nav-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 
-/* ------------------------------- 5. Media Queries -------------------------------- */
+}
+.nav-menu ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-basis: 350px;
+    list-style: none;
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+    padding: 5px 20px;
+
+}
+
+.header-slogan {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 200px;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    padding: 20px 250px;
+    margin: 25px;
+}
+
+.header-img-squiggle {
+    width: 60px;
+    position: absolute;
+    bottom: 0;
+    left: calc(50% - 30px);
+    /*padding-top: 50px;*/
+    /*margin-top: 50px;*/
+}
+
+.the-button {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #FFFFFF;
+    background-color: #ED4385;
+    border-radius: 50px;
+    padding: 25px 40px 25px 40px;
+    box-shadow: 0 21px 11px -10px rgb(0 0 0 / 20%);
+    margin-bottom: 75px;
+}
+
+.the-button a{
+    text-decoration: none;
+}
+
+/* --------------- 4.2 Company Description ------------ */
+.about-us {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+}
+
+.company-description {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 200px;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    padding: 20px 250px;
+    margin: 25px;
+}
+
+
+/* --------------- 4.x Footer ------------------------- */
+
+.page-footer {
+    background-color: black;
+}
+
+.page-footer p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+    color: #FFFFFF;
+    padding: 10px;
+text-align: center;
+}
